# Weekly-Pulse-Engine

./: CMakeLists.txt  README.md  start.sh
include/: Property.hpp  PropertyList.hpp  dictionaries.hpp  helper_functions.hpp  input_routines.hpp  main.hpp  output_routines.hpp  reports.hpp
scripts/: append_sheet_injection.py  append_sheet_injection_2.py  fix_csv_format.py  logging_config.py  oversee_process.py  parse_inbox.py  rename_latest_log.py
src/: main.cpp
